<resources>
    <string name="app_name">Till Sample</string>
    <string name="app_relaunch">App Relaunching, just wait 10 seconds for transactions</string>
    <string name="credit_info_tv">To start credit transactions the value has to be negative.\n\nExample: -10.00</string>
    <string name="wallee_settings">Wallee Settings Menu</string>
    <string name="service_transaction">Start Service Transaction</string>
    <string name="deep_link_transaction">Deep Link Request</string>
    <string name="open">open</string>
    <string name="config">Configuration</string>
    <string name="init">Initialisation</string>
    <string name="settings">Settings</string>
    <string name="generate_pan_token">GENERATE PAN TOKEN</string>
    <string name="execute_final_balance">Execute Final Balance</string>
    <string name="get_config_info">PinPad info</string>
    <string name="execute_submission">Execute Submission</string>
    <string name="execute_transmission">Execute Transmission</string>
    <string name="void_transaction">Void Transaction</string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="cancel_last_transaction_operation">Cancel Last Transaction Operation</string>
    <string name="authorize_transaction">Authorize Transaction</string>
    <string name="check_api_service_compatibility">Check Api Service Compatibility</string>
    <string name="exit">Exit</string>
    <string name="return_value">Return</string>
    <string name="execute_configuration">Execute Configuration</string>
    <string name="execute">Execute</string>
    <string name="execute_initialisation">Execute Initialisation</string>
    <string name="initialisation_result">Initialisation Result</string>
    <string name="ok">OK</string>
    <string name="configuration_result">Configuration Result</string>
    <string name="pinpad_information">Pinpad Information</string>
    <string name="enable_system_bar">Enable System Bar</string>
    <string name="disable_system_bar">Disable System Bar</string>
    <string name="reservation_adjustment">Reservation Adjustment</string>
    <string name="terminal_configuration_data">Configuration Data</string>
    <string name="execute_configuration_data">Execute Configuration Data</string>
    <string name="configuration_data">Configuration Data</string>
    <string name="configuration_data_response">Configuration Data Response</string>
    <string name="depp_link_response">Depp Link Response</string>
    <string name="error_decoding">Error decoding</string>
    <string name="reserve_reference">Reserve Reference</string>
    <string name="acquirer_id">Acquirer ID</string>
    <string name="start_request">Start Request</string>
    <string name="currency_code">Currency Code</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="show_trx_result_screen">Show Trx Result Screen</string>
    <string name="merchant_reference">Merchant Reference</string>
    <string name="invoice_merchant_reference">Invoice Merchant Reference</string>
    <string name="add_line_item">Add Line Item</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="item">Item</string>
    <string name="remove_line_item">Remove Line Item</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="customConfig">Custom Configuration</string>
    <string name="enter_applicationid">Enter applicationId</string>
    <string name="get">Get</string>
    <string name="custom_configuration_result">Custom Configuration Result</string>
    <string name="reprint_receipt">Reprint Receipt</string>
    <string name="accessibility_mode">Accessibility mode</string>
    <string-array name="accessibility_modes">
        <item>Standard interface</item>
        <item>Blind mode</item>
        <item>Colour-blind mode (unsupported)</item>
    </string-array>
</resources>
